--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <!-- resolução: 320 x 568 -->
 </head>
 <body>
-	<div class="inicio">
+	<!--<div class="inicio">
 		<div class="fill light-white-font">
 			<div id="home" class="fill">
 				<div class="center text-center">
@@ -23,21 +23,104 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>-->
 
-	<div class="evento">
-		<div class="center text-center">
-			<h1>EVENTO</h1>
+	<section class="bg-header">
+		<a id="home"></a>
+		<div class="section-config">
+			<div class="conteudo-header">
+				<div class="header-title">
+					<img src="logo.png" class="img-responsive logo" alt="Molho shoujo logo">
+					<h1 class="font-dry-brush titulo">Molho Shoujo Tour</h1>
+					<span class="hr-style"></span>
+					<p class="font-comfortaa paragrafo">2 de dezembro<br>Centro de Eventos do Ceará
+					<br>Av. Washignton Soares, 999</p>
+					<p class="font-comfortaa paragrafo">Quer curtir uma roda de conversa sobre o universo shoujo?</p>
+
+					<button class="btn-confirmar font-dry-brush">Confirme sua presença</button>
+				</div>
+			</div>
 		</div>
-	</div>
-
-	<div class="sobre">
-		<div class="center text-center">
-			<h1>SOBRE</h1>
+	</section>
+	<section class="bg-header">
+		<div class="section-config">
+			<div class="conteudo-header">
+				<div class="div-title">
+					<h1 class="font-dry-brush titulo2">Sobre o evento</h1>
+					<span class="hr-style2"></span>
+					<p class="font-comfortaa paragrafo">Lorem ipsum dolor sit amet Lorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit ametLorem ipsum dolor sit amet</p>
+					<span class="hr-style2"></span>
+				</div>
+			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="formulario">
+
+		<div class="section-config">
+			<div class="conteudo-header">
+				<div class="div-title">
+					<h1 class="font-dry-brush titulo2">Quem somos</h1>
+					<span class="hr-style2"></span>
+					<p class="font-comfortaa paragrafo">
+						Oi! Somos o Molho Shoujo, um podcast de debates
+						ácidos a respeito do mundo shoujo/josei que tanto amamos e odiamos. A
+						cada episódio, iremos problematizar questões sociais e culturais como
+						romantização do estupro, imposição de gênero e protagonismo feminino
+						embutidos em algum obra. Contamos com sua participação para enriquecer
+						o debate. E aí, servidos?
+					</p>
+					<span class="hr-style2"></span>
+				</div>
+			</div>
+		</div>
+
+		<div class="section-config">
+			<div class="conteudo-header">
+				<div class="div-title">
+					<h1 class="font-dry-brush titulo2">Confirme sua inscrição</h1>
+					<span class="hr-style2"></span>
+						<div class="container-mail">
+							<form action="mailto:someone@example.com" method="post">
+
+								<label for="assunto">Nome Completo:</label>
+								<input type="text" id="assunto" class="input">
+
+								<label for="email">E-mail:</label>
+								<input type="text" id="email" class="input">
+
+								<label for="mensagem">Idade:</label>
+								<textarea id="mensagem" class="textarea"></textarea>
+
+								<!-- <button class="button" type="submit" onclick="clicarEnviar()">Enviar</button> -->
+								<button class="btn-confirmar font-dry-brush">Enviar</button>
+
+							</form>
+						</div>
+					<span class="hr-style2"></span>
+					<h1 class="font-dry-brush titulo2">Não se perca!</h1>
+
+					<div class="mapa">
+						<div class="center text-center">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2976860348326!2d-38.577962385739326!3d-3.745194297275238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74bdc4120f3b3%3A0xb408a70df65d7a96!2sInstituto+UFC+Virtual!5e0!3m2!1spt-BR!2sbr!4v1542935330060" width="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- <div class="evento">
+			<div class="center text-center">
+				<h1>EVENTO</h1>
+			</div>
+		</div>
+
+		<div class="sobre">
+			<div class="center text-center">
+				<h1>SOBRE</h1>
+			</div>
+		</div> -->
+
+	<!-- <div class="formulario">
 		<div class="center text-center">
 			<h1>CONFIRME SUA INSCRIÇÃO</h1>
 		</div>
@@ -57,13 +140,13 @@
 
 			</form>
 		</div>
-		</div>
+		</div> -->
 
-	<div class="mapa">
+	<!-- <div class="mapa">
 		<div class="center text-center">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2976860348326!2d-38.577962385739326!3d-3.745194297275238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74bdc4120f3b3%3A0xb408a70df65d7a96!2sInstituto+UFC+Virtual!5e0!3m2!1spt-BR!2sbr!4v1542935330060" width="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
-	</div>
+	</div> -->
 
 </body>
 </html>
