Rolagem para o formulário

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 		</div>
 
 		<div class="section-config2">
-				<div class="div-title2">
+				<div id="event-form" class="div-title2">
 					<h1 class="font-dry-brush titulo2 text-center">Confirme sua presença!</h1>
 					<span class="hr-style2"></span>
-						<div id="event-form" class="container-mail">
+						<div class="container-mail">
 							<form action="mailto:someone@example.com" method="post">
 								<div class="label">
 									<label for="assunto" class="text-label label">Nome Completo:</label>
