--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 								<div class="front">
 									<img class="photo-item" src="imgs/fotos/Amanda.png" alt="Amanda"/>
 								</div>
-								<div class="back">Amanda</div>
+								<div class="back"><a class="profile-link" href="https://www.instagram.com/asasdetinta" target="_blank">Amanda</a></div>
 							</div>
 							<div class="photo-grid-item second-item">
 								<div class="front">
 									<img class="photo-item" src="imgs/fotos/Ana.png" alt="Ana"/>
 								</div>
-								<div  class="back">Ana</div>
+								<div  class="back"><a class="profile-link" href="https://www.instagram.com/anaraqueen" target="_blank">Ana</a></div>
 							</div>
 							<div class="photo-grid-item third-item">
 								<div class="front">
@@ -95,7 +95,7 @@
 								<div class="front">
 									<img class="photo-item" src="imgs/fotos/Giovanna.png" alt="Giovanna"/>
 								</div>
-								<div  class="back">Giovanna</div>
+								<div  class="back"><a class="profile-link" href="https://www.instagram.com/giovsmagda" target="_blank">Giovanna</a></div>
 							</div>
 							<div class="photo-grid-item sixth-item">
 								<div class="front">
@@ -107,7 +107,7 @@
 								<div class="front">
 									<img class="photo-item" src="imgs/fotos/Laís.png" alt="Laís"/>
 								</div>
-								<div  class="back">Laís</div>
+								<div  class="back"><a class="profile-link" href="https://www.instagram.com/_laissevero" target="_blank">Laís</a></div>
 							</div>
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 									<input type="text" id="idade" class="input-idade">
 								</div>
 								<!-- <button class="button" type="submit" onclick="clicarEnviar()">Enviar</button> -->
-								<div class="text-center">
+								<div class="text-center2">
 									<button class="btn-enviar font-dry-brush">Enviar</button>
 								</div>
 
