--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
 
 							</form>
 						</div>
+						<div class="event-images">
+							<img class="event-image" src="imgs/local/11.jpg" alt="Imagem do local"/>
+						</div>
 					<span class="hr-style2"></span>
 
 					<div class="mapa text-center">
