Local no mapa corrigido

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 					<div class="mapa text-center">
 						<h1 class="font-dry-brush titulo2">Não se perca!</h1>
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2976860348326!2d-38.577962385739326!3d-3.745194297275238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74bdc4120f3b3%3A0xb408a70df65d7a96!2sInstituto+UFC+Virtual!5e0!3m2!1spt-BR!2sbr!4v1542935330060" class="mapa-size" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15924.835161138564!2d-38.4803927!3d-3.7646874!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8d1efb0de23670ce!2sCeara+Events+Center!5e0!3m2!1sen!2sbr!4v1543958850405" class="mapa-size" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 			</div>
 		</div>
