--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 							</div>
 						</div>
 					</div>
-					<a href="https://www.facebook.com/molhoshoujo"><i class="fa fa-facebook-official icon m-r-45"></i></a>
-					<a href="https://www.instagram.com/molhoshoujo"><i class="fa fa-instagram icon"></i></a>
+					<a href="https://www.facebook.com/molhoshoujo" target="_blank"><i class="fa fa-facebook-official icon m-r-45"></i></a>
+					<a href="https://www.instagram.com/molhoshoujo" target="_blank"><i class="fa fa-instagram icon"></i></a>
 				</div>
 			</div>
 		</div>
@@ -161,46 +161,5 @@
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/main.js"></script>
-		
-		<!-- <div class="evento">
-			<div class="center text-center">
-				<h1>EVENTO</h1>
-			</div>
-		</div>
-
-		<div class="sobre">
-			<div class="center text-center">
-				<h1>SOBRE</h1>
-			</div>
-		</div> -->
-
-	<!-- <div class="formulario">
-		<div class="center text-center">
-			<h1>CONFIRME SUA INSCRIÇÃO</h1>
-		</div>
-
-		<div class="container-mail">
-			<form action="mailto:someone@example.com" method="post">
-				<label for="email">EMAIL</label>
-				<input type="text" id="email" class="input">
-
-				<label for="assunto">NOME</label>
-				<input type="text" id="assunto" class="input">
-
-				<label for="mensagem">IDADE</label>
-				<textarea id="mensagem" class="textarea"></textarea>
-
-				<button class="button" type="submit" onclick="clicarEnviar()">ENVIAR</button>
-
-			</form>
-		</div>
-		</div> -->
-
-	<!-- <div class="mapa">
-		<div class="center text-center">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.2976860348326!2d-38.577962385739326!3d-3.745194297275238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74bdc4120f3b3%3A0xb408a70df65d7a96!2sInstituto+UFC+Virtual!5e0!3m2!1spt-BR!2sbr!4v1542935330060" width="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</div>
-	</div> -->
-
 </body>
 </html>
